# fintrdr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt  review.sh
.github/: copilot-instructions.md
.github/agents/: crypto-watchdog.agent.md  day-trader.agent.md  economist.agent.md  periodic-evaluator.agent.md  risk-manager.agent.md  strategy-agent.agent.md  tech-specialist.agent.md  wealth-strategist.agent.md
.github/instructions/: infra.instructions.md
docs/: DESIGN.md  INVESTORS.md  OPERATIONS.md  REFERENCES.md  ROADMAP.md  wiki_map.html
docs/reports/: learning_summary_20260409.json  learning_summary_20260410.json  learning_summary_20260411.json  learning_summary_20260412.json
knowledge-base/: Wiki Index.md
src/: main.py
src/application/: audit_service.py  backtest_service.py  coordinator.py  day_trade_review.py  discovery_run.py  expand_universe.py  init_portfolio.py  learning.py  lock_in_trades.py  real_time_advisor.py  risk_manager.py  services.py  wiki_visualizer.py
src/audits/: investor_auditor.py  warren_buffett_audit.json
src/domain/: portfolio.py  ports.py  research.py  risk.py  strategy.py  telemetry.py
src/engine/: predictive.py  report_generator.py  research_ingestor.py  wiki_generator.py
src/events/: 2008-09-15_2008_financial_crisis.json
src/infrastructure/: fs.py  llm.py  reporting.py  scraper.py
src/simulator/: comparison_10yr.py  competition.py  engine.py  portfolio.py
src/simulator/data/: ticker_universe.json  (+1 more)
tests/: test_domain.py  test_services.py  test_simulator.py
(+3 files in other folders)
