[project]
name = "fintrdr"
version = "0.1.0"
description = "Automated financial investment engine (DDD + Karpathy Wiki model)"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "types-markdown",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM", "PLC"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
pythonpath = [
  "."
]
testpaths = [
    "tests",
]
